# 2d-rpg-system

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/prototype/: src.rs
src/: area.rs  attack.rs  enemy.rs  lib.rs  main.rs  physics.rs  player.rs
