[package]
name = "rpg_system_2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
bevy_rapier2d = "0.26.0"

[[example]]
name = "prototype"
path = "examples/prototype/src.rs"
